# voxherd-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: release.yml
bridge/: .dockerignore  Dockerfile  __init__.py  __main__.py  activity.py  assistant.py  auth.py  bonjour.py  bridge_server.py  cli.py  env_utils.py  linux_tts.py  mac_stt.py  mac_tts.py  mac_voice_loop.py  narration.py  openai_tts.py  pyproject.toml  requirements.txt  routes.py  server_state.py  session_manager.py  sub_agent_monitor.py  tailscale.py  task_store.py  tls.py  tmux_manager.py  validation.py  win_tts.py  ws_handler.py
bridge/tests/: __init__.py  conftest.py  test_activity.py  test_bridge.py  test_dispatch_queueing.py  test_headless_startup.py  test_hmac.py  test_mac_tts.py
docs/: SETUP.md  api.md  plan-battlefield-canvas.md  prd.md  voice-ux.md
hooks/: codex-notify.py  install-hooks.ps1  install.sh  on-notification.ps1  on-notification.sh  on-session-start.ps1  on-session-start.sh  on-stop.ps1  on-stop.py  on-stop.sh  on-subagent-start.sh  on-subagent-stop.sh
linux/: install-gui.sh  voxherd-panel.desktop  waybar_config.jsonc  waybar_module.py  waybar_style.css
macos/: build-app.sh  build-bridge.sh  create-dmg.sh  notarize.sh  voxherd-bridge.spec
scripts/: build-linux-package.sh  build-stt.sh  build-windows-package.ps1  dev-setup.sh  hmac-test-vectors.json  hmac-test-vectors.py  install-linux.sh  install-windows.ps1  release-macos.sh  run-bridge.sh  test-flow.sh  vh  voxherd-bridge.service
windows/: README.md  requirements-windows.txt
(+29 files in other folders)
